# Project-AETHER

./: .gitignore  CLAUDE.md  Cargo.toml  HARDWARE_VALIDATION.md  README.md
.cargo/: config.toml
.github/workflows/: aether-translator.yml
README/: AT-ROADMAP.md  TXT.rtf
aether-skills/: SKILLS_INDEX.md
aether-skills/_meta/: CLAUDE_CONFIDENCE_MATRIX.md  HOW_TO_USE.md  PRIMARY_SOURCES_LIBRARY.md
aether-skills/cross-cutting/: ch-fingerprint-purity.md
aether-skills/part-01-vision/: SKILL.md
aether-skills/part-02-silicon/: ch04-arm64-substrate.md  ch05-exception-levels.md  ch06-virtualization-extensions.md
aether-skills/part-03-hypervisor/: ch07-boot.md  ch08-memory-architecture.md  ch09-cpu-partitioning.md  ch10-interrupt-routing.md
aether-skills/part-04-devices/: ch11-passthrough-principle.md  ch12-paravirtualization.md  ch13-gpu-sriov.md  ch14-storage.md  ch15-network.md  ch16-usb-input.md
aether-skills/part-05-windows/: ch17-windows-as-guest.md  ch18-acpi-description.md
aether-skills/part-06-android/: ch19-bootloader.md  ch20-linux-kernel.md  ch21-aosp-userspace.md  ch22-microg.md  ch23-play-store.md
aether-skills/part-07-cross-cutting/: ch24-performance.md  ch25-security.md  ch26-time.md
aether-skills/part-08-build/: ch27-build-system.md  ch28-development-workflow.md
aether-skills/part-09-roadmap/: SKILL.md
aether-translator/: Cargo.toml  README.md
aether-translator/corpus/: neon_compile.c
aether-translator/fuzz/: Cargo.toml
aether-translator/fuzz/fuzz_targets/: decode_capstone_diff.rs
aether-translator/scripts/: fetch_gsi.sh
aether-translator/src/: dbt.rs  forbidden_symbols.rs  lib.rs
aether-translator/src/backend/: code_buf.rs  encode.rs  lower_atomic.rs  lower_int.rs  lower_simd.rs  mod.rs
aether-translator/src/corpus/: extract.rs  mod.rs
aether-translator/src/decoder/: bits.rs  branch_sys.rs  dp_immediate.rs  dp_register.rs  dp_simd_fp.rs  load_store.rs  mod.rs  sysreg.rs  top_level.rs
aether-translator/src/ir/: flags.rs  memory.rs  mod.rs  ops.rs  serialize.rs  value.rs
aether-translator/src/lift/: mod.rs
aether-translator/src/opt/: const_fold.rs  copy_prop.rs  dce.rs  flag_elision.rs  gvn.rs  mem_order.rs  mod.rs  redundant_load.rs
aether-translator/src/regalloc/: linear_scan.rs  liveness.rs  mod.rs  x86_regs.rs
aether-translator/src/runtime/: aot.rs  app_compat_x86.rs  bionic_libart.rs  block_cache.rs  branch_chain.rs  cache_persist.rs  context.rs  dispatcher.rs  exception_forward.rs  hello_world.rs  mod.rs  perf_bench.rs  smc_handler.rs  zygote_launch.rs
aether-translator/src/ssa/: cfg.rs  dom.rs  mod.rs  promote.rs  verify.rs
aether-translator/tests/: at10_mem_order.rs  at11_encoder.rs  at12_int_lower.rs  at13_simd_lower.rs  at14_atomics.rs  at15_code_buf.rs  at16_block_cache.rs  at17_dispatcher.rs  at18_branch_chain.rs  at19_context.rs  at1_canned_1000.rs  at1_capstone_fuzz.rs  at20_exception_forward.rs  at21_aot.rs  at22_cache_persist.rs  at23_smc_handler.rs  at24_dbt_ffi.rs  at25_forbidden_symbols.rs  at26_hello_world.rs  at27_bionic_libart.rs  at28_zygote_launch.rs  at29_app_compat_x86.rs  at2_ir_roundtrip.rs  at30_perf_bench.rs  at3_neon_corpus.rs  at4_system_corpus.rs  at5_aether_efi_corpus.rs  at5_system_img.rs  at6_ssa.rs  at7_optimizer.rs  at8_flag_elision.rs  at9_regalloc.rs  at_step_a_pipeline.rs
aosp/device/aether/aether_arm64/: Android.bp  AndroidProducts.mk  BoardConfig.mk  README.md  aether_arm64.mk  device.mk  fstab.aether  manifest.xml  vendorsetup.sh
aosp/device/aether/aether_arm64/configs/: audio_policy_configuration.xml  handheld_core_hardware.xml  media_codecs.xml  media_profiles.xml  network_security_config.xml
docs/: aosp-build-history.md
hypervisor/: Cargo.toml  build.rs  rust-toolchain.toml
hypervisor/src/: acpi.rs  adreno_render.rs  aether_installer.rs  aether_manager.rs  android_boot.rs  android_handoff.rs  android_runtime.rs  android_x86_userspace.rs  aosp.rs  aosp_build.rs  app_compat.rs  avb_boot.rs  boot.rs  boot_x86.rs  boot_x86_avb.rs  boot_x86_esp.rs  bootloader.rs  build_system.rs  configuration_app.rs  cpu.rs  dbt_dispatch.rs  dbt_integration.rs  development_workflow.rs  fex_dispatch.rs  fex_integration.rs  fingerprint.rs  gic.rs  gpu.rs  gpu_sriov.rs  guest_stub.rs  hvc_paravirt_abi.rs  irq_forward.rs  kernel.rs  kernel_defconfig.rs  lib.rs  linux_boot.rs  main.rs  memory.rs  microg.rs  mmio_emu.rs  (+35 more)
hypervisor/src/arm64/: barriers.rs  context.rs  exception.rs  mod.rs  paging.rs  regs.rs  vectors.rs  virt.rs
qemu/: run-android.sh  run-ch34.sh  run-ch35.sh  run-ch36.sh  run-x86.sh  run.sh
tools/aether-install/: Cargo.toml
tools/aether-install/src/: aosp_port.rs  block_io.rs  boot_entry.rs  check.rs  cli.rs  compat_report.rs  device_path.rs  gpu_config.rs  install.rs  install_state.rs  main.rs  nvidia_db.rs  secure_boot.rs  status.rs  uefi_vars.rs  uninstall.rs  update.rs
tools/aether-setup/: Cargo.toml  build.rs
tools/aether-setup/src/: app.rs  hwlist.rs  installer.rs  main.rs  setup_config.rs  theme.rs
tools/aether-setup/src/steps/: compat.rs  confirm.rs  disk.rs  done.rs  eula.rs  mod.rs  progress.rs  welcome.rs  wizard.rs
tools/aosp-device-port/: AOSP_VERSION  README.md
tools/aosp-device-port/scripts/: check-drift.sh
tools/compat-check/: Cargo.toml
tools/compat-check/src/: cpu.rs  gpu.rs  main.rs  memory.rs  report.rs  storage.rs
wsl-scripts/: audit_bp.sh  audit_defaults.sh  audit_devicetree.sh  audit_missing.sh  audit_srcs.sh  check_build.sh  check_osulogin.sh  check_sync.sh  check_sync2.sh  check_sync3.sh  check_sync4.sh  check_usb_esp.ps1  commit_build_history.sh  commit_remaining_work.sh  diagnose_4.sh  emergency_shutdown.ps1  find_build_fail.sh  find_real_error.sh  find_release.sh  force_kill_build.sh  inspect_esp.ps1  install_outage_hotkey.ps1  list_volumes.ps1  phase1_3.sh  phase2_1_init.sh  phase2_2_sync.sh  phase3_1.sh  phase3_3.sh  phase4_1.sh  phase4_1_wait.sh  phase4_2.sh  phase4_4.sh  phase4_4_count.sh  phase5_build.sh  phase5_restart.sh  phase6_partial.sh  repair_and_resume.sh  sweep_corrupt_jars.sh  sweep_zero_files.sh  sync_loop.sh  (+5 more)
(+44 files in other folders)
