[workspace]
resolver = "2"
members = [
    "hypervisor",
    "tools/compat-check",
    "tools/aether-install",
    "tools/aether-setup",
    "aether-translator",
]

exclude = [
    "aether-translator/fuzz",
]

[profile.release]
lto = true
opt-level = "s"
panic = "abort"

[profile.dev]
panic = "abort"
