[package]
name = "hypervisor"
version = "0.1.0"
edition = "2024"
description = "AETHER Type-1 hypervisor — bare-metal ARM64 EL2"
build = "build.rs"

[[bin]]
name = "hypervisor"
path = "src/main.rs"

[[bin]]
name = "selector"
path = "src/bin/selector.rs"

[lib]
name = "hypervisor"
path = "src/lib.rs"

[features]
# ch52: link against libfex.a (FEX-Emu static archive built no_std-style).
# When this feature is off, the extern "C" FEX FFI surface is stubbed so
# `cargo check` succeeds without the upstream FEX dependency in the tree.
default = []
fex_linked = []

