[package]
name = "hypervisor"
version = "0.1.0"
edition = "2024"
description = "AETHER Type-1 hypervisor — bare-metal ARM64 EL2"
build = "build.rs"

[[bin]]
name = "hypervisor"
path = "src/main.rs"

[[bin]]
name = "selector"
path = "src/bin/selector.rs"

[lib]
name = "hypervisor"
path = "src/lib.rs"

[features]
# AT-24: link against the in-tree AETHER DBT translator. Inherits the
# translator's `dbt_linked` feature so the FFI surface routes through the
# real translator rather than the stub. Default keeps Step 1 buildable on
# any host: the translator stubs return Ok and downstream code is unchanged.
default = []
# Legacy ch52 name; preserved so external scripts don't break. Now an alias
# for routing FFI calls through the translator's dbt_linked surface.
fex_linked = ["aether-translator/dbt_linked"]

[dependencies]
# AT-24: AETHER ARM64 -> x86_64 dynamic binary translator. Pure Rust, no_std
# when `std` feature is off. Provides the `aether_dbt_*` FFI surface that
# `fex_integration.rs` / `fex_dispatch.rs` route into (Step 1 of the
# integration plan; supersedes the libfex.a static archive).
aether-translator = { path = "../aether-translator", default-features = false }

